--- a/metal_icon_prediction.ipynb
+++ b/metal_icon_prediction.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Prediction of the metal ion content from multi-parameter data\n",
-    "The Water_data.csv dataset is used, which is a multi-parameter dataset consisting of 201 samples obtained from 67 mixtures of Cadmium, Lead, and tap water.  Three features (attributes) were measured for each sample (Mod1, Mod2, Mod3). Use K-Nearest Neighbor Regression to predict total metal concentration (c_total), concentration of Cadmium (Cd) and concentration of Lead (Pb), for each sample using number of neighbors k = 1, 2, 3, 4 and 5."
+    "The Water_data.csv dataset(found in dataset folder) is used, which is a multi-parameter dataset consisting of 201 samples obtained from 67 mixtures of Cadmium, Lead, and tap water.  Three features (attributes) were measured for each sample (Mod1, Mod2, Mod3). Use K-Nearest Neighbor Regression to predict total metal concentration (c_total), concentration of Cadmium (Cd) and concentration of Lead (Pb), for each sample using number of neighbors k = 1, 2, 3, 4 and 5."
    ]
   },
   {
